...
          "stringUnit": {
            "state": "translated",
            "value": "Add set"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Back"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Back to profile"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Build Muscle"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Delete set"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Enter your age"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Enter your name"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Dumbbell"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "GENERATE MY WORKOUT PLAN"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Generating your workout plan"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Could not create your workout plan"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "170"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "LET'S KEEP YOU SAFE"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Lower Back Pain"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Male"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Mark set as not complete"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "NEXT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Healthy weight"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Workout plan options"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Previous"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Profile and app"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Reps"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Choose how many days"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Set"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "SET UP YOUR WORKOUT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "SLIDE TO FINISH THIS WORKOUT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "START NEXT WORKOUT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Start timer"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "START TODAY'S WORKOUT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "SUBMIT"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Time"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "Try again"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "WEEKLY PROGRESS"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "kg"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "70"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "What are the weights marked in?"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "YOUR FITNESS GOALS"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "YOUR FITNESS PROFILE"
          }
        }
...
          "stringUnit": {
            "state": "translated",
            "value": "YOUR WEEKLY WORKOUT PLAN"
          }
        }
...
